--- a/semana1/portifolio/styles/index.css
+++ b/semana1/portifolio/styles/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Aguafina+Script&display=swap');
+
 * {
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 250vh;
+.body {
+    height: 200vh;
 }
 
 h5 {
@@ -12,103 +14,159 @@ h5 {
     margin: 8% 5% 0 68%;
     font-size: 40px;
 }
-
+div.menu {
+    position: absolute;
+    margin: 1% 5% 0 48%;
+}
 
 div.menu li a{
    display: inline;
-    margin: auto 10px auto;
     color: black;
     text-decoration: none;
 }
 div.menu li {
     float: right;
-    display: inline;
-    margin: 15px 5px;
-    margin-right: 80px;
-}
-div.menu {
-    display: inline;
-}
-
-.one {
-    background: url(../public/1888.png);
-    position: absolute;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-size: cover;
-    width: 50%;
-    height: 420px;
-    border: none;
-    margin: 0;
-}
-
-.seila h2 {
-    font-size: 45px;
-    position: absolute;
-    right: 18%;
-    margin-top: 5%;
-    z-index: 1;
-}
-
-.seila h1 {
-    font-size: 55px;
-    position: absolute;
-    right: 12%;
-    margin-top: 15%;
-    z-index: 1;
-    text-align: center;
-}
-
-.two .portifolio{
-    position: absolute;
-    width: 100%;
-    z-index: 1;
-}
-
-.portifolio h1, p, h2, li, span{
-    margin: 0 20%;
-    text-align: center;
-    z-index: 1;
-}
-
-.two h2 {
-    margin-bottom: 2%;
-    font-size: 50px;
-    margin-top: 5%;
-}
-.two h2.txt01 {
-    margin-top: 30%;
-}
-.two p, li{
-    font-size: 25px;
-}
-.two li {
+    margin: 20px;
     list-style-type: none;
 }
-.two span {
+
+.title {
+    font-size: 55px;
+    position: absolute;
+    margin-top: 10%;
+    right: 14%;
+    text-align: center;
+}
+
+.body {
+    position: absolute;
+    margin: 12% 20%;
+    text-align: center;
+}
+
+.body h5 {
+    font-size: 60px;
+    margin: 28% 0;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.body li {
+    list-style-type: none;
+}
+.body span {
  font-size: 20px;
 }
 
+.container {
+    margin-top: 38%;
+    height: 250px;
+}
+
+.container h2 {
+    margin-bottom: 2%;
+    font-size: 50px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-image: radial-gradient(circle ,#afa3cc,#605281,#190a3f);
+}
+
+.container p, ol {
+    margin-bottom: 5%;
+    font-size: 25px;
+}
+
 .devprojects button {
-    padding: 5px;
+    padding: 6px;
     margin-left: 10%;
+    background: #938aaa;
+    border: none;
+    cursor: pointer;
 }
 .devprojecs li {
     text-decoration: none;
 }
 
+.imgone {
+    background: url(../public/1888.png);
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 50%;
+    height: 420px;
+    top: 0;
+}
 footer {
-    background: #101822;
-    position: fixed;
-    bottom: 0;
+    background: #150836;
+    position: absolute;
+    top: 220vh;
     width: 100%;
-    padding: 50px 300px ;
+    height: 260px;
 }
 
-footer button, input {
-    padding: 5px;
+footer h1 {
+    margin-top: 1%;
+    margin-left: 15%;
+    color: #938aaa;
 }
-footer input {
-    margin-left: 250px;
+
+footer .msg {
+    position: absolute;
+    margin-left: 25%;
+    color: #938aaa;
+    margin-top: 2%;
+}
+
+footer .msg input {
+    padding: 2px;
+    height: 68px;
+    display: block;
+}
+
+footer button {
+    padding: 5px;
+    background: #938aaa;
+    border: none;
+    border-radius: 2px;
+    margin: 1% 22% 0 22%;
+}
+
+.rodape {
+    display: block;
+    color: #938aaa;
+    margin-left: 10%;
+    width: 200px;
+    margin-top: 2%;
+}
+
+footer img {
+    position: absolute;
+    width: 25%;
+    top: 2%;
+    right: 10%;
+}
+
+nav ul img{
+    width: 3%;
+}
+nav {
+    position: absolute;
+    left: 47%;
+    top: 233vh;
+    z-index: 1;
+}
+
+nav ul li{
+    list-style-type: none;
+    display: inline;
+    margin-left: 20px;
+}
+
+nav button {
+    margin: 2% 7%;
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+    background: #938aaa;
 }
 
