Posicionamento do botão abaixo do texto, utilizando display: block

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -142,3 +142,8 @@ td button:hover {
 #back-button:hover {
     background-color: #635a3d
 }
+
+.botao-amarelo {
+    display: block;
+    margin:0 auto;
+}
