Alteração do tamanho da imagem, utilizando width

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -108,6 +108,10 @@ div:last-child {
 table {
     width: 60%;
 }
+table img {
+   position: relative;
+   width: 50px;
+}
 
 td button {
     background-color: #fadf63;
