--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -44,11 +44,13 @@ div img {
     height: 40px;
     border-radius: 5px;
     font-size: 20px;
-    color: white;
 }
 
 .botao-amarelo:hover {
     background-color: #c44f00;
+}
+.botao-amarelo:active {
+    color: white;
 }
 
 .container {
@@ -92,9 +94,7 @@ div img {
     padding: 100px 0;
     font-size: 60px;
 }
-div button:last-child a{
-    text-decoration: none;
-}
+
 
 /**
   *
@@ -152,6 +152,9 @@ td button:hover {
 
 #back-button:hover {
     background-color: #635a3d
+}
+#back-button a:active {
+    color: white;
 }
 
 .botao-amarelo {
