--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -132,6 +132,13 @@ td button:hover {
     height: 100px;
 }
 
+.container-do-search input {
+    border-top: 0 ;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 2px solid rgb(177, 175, 175);
+}
+
 .container-do-search img:hover {
     opacity: 30%;
 }
