Centralização da tabela, utilizando margin

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -109,6 +109,8 @@ div:last-child {
 
 table {
     width: 60%;
+    margin: 0 auto;
+    text-align: center;
 }
 table img {
    position: relative;
