--- a/semana2/aula6-flexboxGrid/gridGarden.css
+++ b/semana2/aula6-flexboxGrid/gridGarden.css
@@ -38,96 +38,107 @@
   #water {
     grid-column-start: span 3;
       grid-column-end: 6;
-    }
+  }
 
-    #water {
-        grid-column: 4/6 ;
-    }
+  #water {
+    grid-column: 4/6 ;
+  }
 
-    #water {
-        grid-column: span 3/5;
-    }
+  #water {
+    grid-column: span 3/5;
+  }
 
-    #water {
-        grid-row-start: 3;
-    }
+  #water {
+    grid-row-start: 3;
+  }
 
-    #water {
-        grid-row: span 3/6;
-    }
+  #water {
+    grid-row: span 3/6;
+  }
 
-    #poison {
-        grid-column: 2;
-        grid-row: 5;
-    }
+  #poison {
+    grid-column: 2;
+    grid-row: 5;
+  }
 
-    #water {
-        grid-column: span 4/6;
-        grid-row: span 5
-    }
+  #water {
+    grid-column: span 4/6;
+    grid-row: span 5
+  }
 
-    #water {
-        grid-area: 1 / 2 / 4 / 6
-    }
+  #water {
+    grid-area: 1 / 2 / 4 / 6
+  }
 
-    #water-1 {
-        grid-area: 1 / 4 / 6 / 5;
-      }
+  #water-1 {
+    grid-area: 1 / 4 / 6 / 5;
+  }
       
-      #water-2 {
-      grid-area: 2 / 3 / 5 / 6
-      }
+  #water-2 {
+    grid-area: 2 / 3 / 5 / 6
+  }
 
-      .água {
-        ordem: 0;
-      }
+  .água {
+   order: 0;
+  }
       
-      #Poção {
-      order: 5;
-      }
+   #Poção {
+    order: 5;
+   }
 
-      .Poção {
-      order: -1
-      }
+  .Poção {
+    order: -1
+   }
 
-      #garden {
-        display: grid;
-      grid-template-columns: 50%;
-        grid-template-rows: 20% 20% 20% 20% 20%;
-      }
+   #garden {
+    display: grid;
+    grid-template-columns: 50%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+   }
 
-      #garden {
-        display: grid;
-      grid-template-columns: repeat(1, 12.5%);
-        grid-template-rows: 20% 20% 20% 20% 20%;
-      }
+   #garden {
+    display: grid;
+    grid-template-columns: repeat(1, 12.5%);
+    grid-template-rows: 20% 20% 20% 20% 20%;
+   }
 
-      #garden {
-        display: grid;
-      grid-template-columns: 100px 3em 40%;
-        grid-template-rows: 20% 20% 20% 20% 20%;
-      }
+   #garden {
+    display: grid;
+    grid-template-columns: 100px 3em 40%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+   }
 
-      #garden {
-       display: grid;
-      grid-template-columns: 1fr 5fr;
-       grid-template-rows: 20% 20% 20% 20% 20%;
-      }
+   #garden {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+   }
 
-      #garden {
-        display: grid;
-      grid-template-columns: 50px 1fr 1fr 1fr 50px;
-      grid-template-rows: 20% 20% 20% 20% 20%;
-      }
+    #garden {
+    display: grid;
+    grid-template-columns: 50px 1fr 1fr 1fr 50px;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+    }
 
-      #garden {
-        display: grid;
-      grid-template-columns: 75px 3fr 2fr;
-        grid-template-rows: 100%;
-      }
+    #garden {
+    display: grid;
+    grid-template-columns: 75px 3fr 2fr;
+    grid-template-rows: 100%;
+    }
 
-      #garden {
-        display: grid;
-        grid-template-columns: 20% 20% 20% 20% 20%;
-      grid-template-rows: 50px 0 0 0;
-      }
+   #garden {
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 50px 0 0 0;
+   }
+
+   #garden {
+    display: grid;
+    grid-template: 60% 60% / 200px;
+   }
+
+   #garden {
+    display: grid;
+    grid-template: 1fr 50px / 20% 80%;
+  }
+      
