--- a/semana2/aula6-flexboxGrid/Grid/atividade3grid.css
+++ b/semana2/aula6-flexboxGrid/Grid/atividade3grid.css
@@ -5,66 +5,72 @@
 }
 
 .header {
-    height: 40px;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    grid-template-rows: 5vh;
 }
+#content1 {
+    display: grid;
+    background: #F012BE;
+    grid-area: c1;
+    grid-template-rows: 65vh;
+    justify-content: center;
+    align-items: center;
+}
+
 #header {
     background: #2ECC40;
     display: grid;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
+
 #menu {
     background: #FFDC00;
     display: grid;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-#content1 {
-    height: 400px;
-    background: #F012BE;
-    display: grid;
-    grid-rows: 3;
-    align-items: center;
-    justify-content: center;
-}
 #section {
-    height: 170px;
-    background: cornsilk;
+    background: mintcream;
     display: grid;
-    grid-template-columns: 3fr 1fr 2fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 22vh;
 }
 
 #section2 {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 11vh 11vh;
+    grid-column: 3 / 4;    
 }
+
+#content2 {
+    background: #0074D9;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
 #image {
     background: #FF4136;
     display: grid;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
+
 #extra {
     background: #01FF70;
     display: grid;
-    align-items: center;
     justify-content: center;
-}
-#content2 {
-    background: #0074D9;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    display: grid;
     align-items: center;
-    justify-content: center;
 }
+
 #footer {
-    height: 40px;
     background: #B10DC9;
     display: grid;
-    align-items: center;
+    grid-template-rows: 8vh;
     justify-content: center;
+    align-items: center;
 }
+
