--- a/semana2/aula6-flexboxGrid/Flexbox/atividades3.css
+++ b/semana2/aula6-flexboxGrid/Flexbox/atividades3.css
@@ -42,6 +42,7 @@
 
 #content2 {
     background: #0074D9;
+    width: 52vw;
     display:flex;
     align-items: center;
     justify-content:center;
@@ -67,7 +68,7 @@
 }
 #footer {
     background: #B10DC9;
-    height: 30px;
+    height: 40px;
     display: flex;
     display:flex;
     align-items: center;
