Função criada para adicionar Imagem ao post

--- a/semana4/classes/blog/style.css
+++ b/semana4/classes/blog/style.css
@@ -25,7 +25,7 @@ body {
     font-weight: 500;
 }
 
-#container-form-blog input, textarea {
+#container-form-blog input, textarea{
     margin-bottom: 10px;
     text-align: center;
     padding: 10px 25px;
@@ -52,4 +52,9 @@ body {
     color: rgb(0, 0, 0);
     text-align: center;
     margin-bottom: 5px;
+}
+
+#imgPost {
+    width: 150px;
+    height: 100px;
 }
